@@ -15,6 +15,7 @@ eZ Online Editor MCE extension Changelog
 * Made sure first valid image attribute is used on embed images
 * Implemented #006730: Online Editor 3.0 does not obey permissions
   Now possible to limit access to editor / relations(upload and embed properties) / search / browse
+* Implemented #013076: Browse popup: improve image preview
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
